# brul

./: .gitignore  Cargo.toml  cog.toml  readme.md
.cargo/: config.toml
crates/brul/: CHANGELOG.md  Cargo.toml  files.md  impl.md
crates/brul-complier/: CHANGELOG.md
crates/brul-gui/: CHANGELOG.md  Cargo.toml
crates/brul-gui/src/: lib.rs  renderer.rs
crates/brul-macros/: CHANGELOG.md  Cargo.toml
crates/brul-macros/src/: lib.rs
crates/brul-utils/: CHANGELOG.md  Cargo.toml
crates/brul-utils/src/: color.rs  config.rs  control.rs  error.rs  lib.rs  math.rs
crates/brul/src/: app.rs  control.rs  error.rs  lib.rs  runtime.rs  state.rs  window.rs
crates/brul/src/app/: builder.rs  event_bus.rs  handle.rs  manager.rs
examples/basic-app/: Cargo.toml  basic.rs
examples/basic-app/src/: main.rs
plans/: architecture.md  decisions.md  events_system.md  gui_architecture.md  implementation_details.md  implementation_plan.md  quick_start.md  redo_vdom.md  refactoring.md  roadmap.md  slice.md  start_checklist.md  step_by_step_events.md  svelte_style_architecture.md  tracing_and_error_plan.md  why_own_event.md
src/: app.rs  brul.rs  core.rs  event_loop.rs  events.rs  lib.rs  main.rs  render.rs  widget.rs
tests/macros/: Cargo.toml
