[package]
name = "brul-macro"
version = "0.1.0"
edition = "2024"
description = "BRUL macro - part of BRUL"
authors = ["Ku6epXBOCTuK"]
license = "MIT"

[lib]
name = "brul_macro"
path = "src/lib.rs"
proc-macro = true

[dependencies]
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["extra-traits", "full"] }
