[package]
name = "brul"
version = "0.1.0"
edition = "2024"

[dependencies]
brul-macro = { workspace = true }
brul-utils = { workspace = true }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
