[package]
name = "basic-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description.workspace = true
authors.workspace = true

[dependencies]
brul = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }
